# my_rt_in_one_weekend

./: CMakeLists.txt  README.md  main.cpp
inc/: CImg.h  aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  indicators.h  interval.h  material.h  perlin.h  quad.h  ray.h  ray.hpp  sphere.h  texture.h  utils.h  vec.h
lib/: CMakeLists.txt
